# i-migrate

./: .gitignore  README.md  i migrate.txt  try.rs
i-migrate_frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
i-migrate_frontend/src/: App.css  App.jsx  Web3Provider.jsx  index.css  main.jsx
i-migrate_frontend/src/Context/: AppContext.jsx
i-migrate_frontend/src/Landingpage/: AboutPage.jsx  ConnectWallet.jsx  Hero.jsx  Navbar.jsx  PricingPagge.jsx  RoboAnimation.jsx
i-migrate_frontend/src/SignUser/: Payment.jsx  PaymentFlow.jsx  PaymentForm.jsx
imigrate/: Cargo.toml  database_cred_from.json
imigrate/src/: main.rs
imigrate/src/core_functions/: database_migrate.rs  mod.rs
imigrate/src/core_functions/databases/: cockroach.rs  mariadb.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  sqlite.rs
