[package]
name = "imigrate"
version = "0.1.0"
edition = "2024"

[dependencies]

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "any", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
open = "5.0"
tiny_http = "0.12"